# Jola_Train_Pipeline

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
configs/: olmo2_13b_cpu_config.yaml  olmo2_13b_instruct_16k_config.yaml
jola/: OLMO2_INTEGRATION.md  README.md  SHAREGPT_INTEGRATION.md  requirements.txt  run_sharegpt_training.py  test_olmo2_integration.py  test_sharegpt_integration.py  test_sharegpt_simple.py
jola/examples/: run_jola_olmo2.py  run_jola_olmo2_0425_1b_sft.py  run_jola_olmo2_0425_1b_sft_local.py  run_jola_sharegpt.py  run_jola_sharegpt_simple.py  run_olmo2_0425_1b_sft_inference.py  test_olmo2_0425_1b_sft_simple.py
jola/jola/: __init__.py  config_olmo2.yaml  config_sharegpt.yaml  configuration_olmo2.py  dataset_sharegpt.py  modeling_olmo2.py
scripts/: __init__.py  config_utils.py  fix_model_config.py  setup_project.py  train_olmo2_13b.py  train_olmo2_13b_cpu.py
